Premake Changelog
-----------------

3.1 (in progress)
* Added fileexists() function to Lua environment
* Feature 1096677: exclude files from matchfiles (package.excludes)
* Bug 1422068: package.path="." causes bad makefiles

3.0
* Upgraded Lua interpreter to version 5.0.1
* The options table now stores simple values, rather than tables
* Completed MonoDevelop support
* Improved .NET resource handling for GNU generator
* Added unit test suite
* Merged Scott Graham unicode build flag patch
* Removed package.warninglevel in favor of extra-warnings flag
* Added package.targetprefix 
* Overhauled structure of generated GNU makefiles
* Added --os command line option
* Fixed bug 1268588: Use gcc to link C packages
* Fixed bug 1363306: GNU C# should copy referenced DLLs

2.4
* Added chdir() to Lua script environment
* Merged Thomas Harning's patch for .NET resources on GNU
* Fixed bug 1194702: Can't put multiple packages in same directory
* Fixed bug in GNU shared library builds (doh!)
* Added target 'vs2002' to replace 'vs7'

2.3
* Added 'project.config[]' with 'bindir' and 'libdir'
* Merged Scott Graham's "warninglevel" patch.
* Fixed bug 1153484: Import lib in wrong directory.
* Fixed bug 1013352: Stack overflow with large projects.
* Fixed bug 945406: package.files, bad value = crash

2.2
* Worked around VS.NET bug for .NET assemblies > 64K.
* Added --very-verbose flag to GNU generator.
* GNU generator now supports assembly sources.
 
2.1
* File extension of generated binaries can now be set
  with config.targetextension.
* Windows targets now handle .def files for DLLs.

2.0
* Can now specify build actions per file
* Include paths are now passed to VC7 resource compiler
* Removed _WIN32 define from Cygwin makefiles
* Added package.objdir to set intermediates directory
* Added rmdir() to Lua script environment
* A big bag of bug fixes

1.9
* Made verbose mode even more verbose.
* posix.c now builds properly as C.